@@ -182,8 +182,7 @@ public class TermsQuery extends Query implements Accountable {
         builder.append(' ');
       }
       first = false;
-      builder.append(iterator.field()).append(':');
-      builder.append(term.utf8ToString());
+      builder.append(new Term(iterator.field(), term).toString());
     }
 
     return builder.toString();
