@@ -123,6 +123,9 @@ Bug Fixes
 * LUCENE-6776: Fix geo3d math to handle randomly squashed planet
   models (Karl Wright via Mike McCandless) 
 
+* LUCENE-6792: Fix TermsQuery.toString() to work with binary terms.
+  (Ruslan Muzhikov, Robert Muir)
+
 Other
 
 * LUCENE-6174: Improve "ant eclipse" to select right JRE for building.
